WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152619
text-decoration: line-through is mispositioned when text has overline/underline too.
https://bugs.webkit.org/show_bug.cgi?id=152619
Summary
text-decoration: line-through is mispositioned when text has overline/underli...
alan
Reported
2015-12-31 10:43:27 PST
ssia.
Attachments
Patch
(9.02 KB, patch)
2015-12-31 10:56 PST
,
alan
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-12-31 10:56:04 PST
Created
attachment 268047
[details]
Patch
alan
Comment 2
2015-12-31 11:57:52 PST
Committed
r194465
: <
http://trac.webkit.org/changeset/194465
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug