text-decoration: line-through is mispositioned when text has overline/underline too. https://bugs.webkit.org/show_bug.cgi?id=152619

Reviewed by Simon Fraser.

Line-through painting was mistakenly calling drawLineForText with overline/underline positioning.

Source/WebCore:

Test: fast/css3-text/css3-text-decoration/text-decoration-line-through-mispositioned.html

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paintDecoration): Deleted.
* rendering/TextDecorationPainter.cpp:
(WebCore::TextDecorationPainter::paintTextDecoration):

LayoutTests:

* fast/css3-text/css3-text-decoration/text-decoration-line-through-mispositioned-expected.html: Added.
* fast/css3-text/css3-text-decoration/text-decoration-line-through-mispositioned.html: Added.

Canonical link: https://commits.webkit.org/170703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194465 268f45cc-cd09-0410-ab3c-d52691b4dbfc